<resources>
    <string name="app_name">九合</string>
    <string-array name="weeks">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>

    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="title_activity_device_bind">DeviceBindActivity</string>


    <string name="please_input_preview_uri">请输入您需要播放的实时预览URL</string>
    <string name="please_input_playback_uri">请输入您需要播放的录像回放URL</string>
    <string name="please_input_voicetalk_uri">请输入您需要对讲的URL</string>
    <string name="real_preview">实时预览</string>
    <string name="playback">录像回放</string>
    <string name="voice_talk">语音对讲</string>
    <string name="title_activity_preview">实时预览</string>
    <string name="title_activity_playback">录像回放</string>
    <string name="capture">抓图</string>
    <string name="start_record">开始录像</string>
    <string name="close_record">关闭录像</string>
    <string name="sound_open">声音开</string>
    <string name="sound_close">声音关</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="stop_preview">停止预览</string>
    <string name="start_preview">开始预览</string>
    <string name="stop_playback">停止回放</string>
    <string name="start_playback">开始回放</string>
    <string name="stop_talk">关闭对讲</string>
    <string name="start_talk">开启对讲</string>

</resources>
