<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black">

            <TextureView
                android:id="@+id/texture_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/result_hint_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:visibility="gone" />
            <Button
                android:id="@+id/start"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout"
                android:text="@string/start_preview" />

        </FrameLayout>


        <android.support.design.widget.TextInputLayout
            android:visibility="gone"
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frame_layout"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/review_uri_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_preview_uri"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>



        <Button
            android:visibility="gone"
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_layout"
            android:layout_toRightOf="@id/start"
            android:text="@string/stop_preview" />

        <Button
            android:visibility="gone"
            android:id="@+id/capture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start"
            android:text="@string/capture" />

        <Button
            android:visibility="gone"
            android:id="@+id/record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start"
            android:layout_toRightOf="@id/capture_button"
            android:text="@string/start_record" />

        <Button
            android:visibility="gone"
            android:id="@+id/sound_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start"
            android:layout_toRightOf="@id/record_button"
            android:text="@string/sound_open" />

        <TextView
            android:visibility="gone"
            android:id="@+id/record_file_path_text"
            android:layout_below="@id/capture_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="/storage/emulated/0/Android/data/com.hikvision.open.app/files/Pictures/_20180917151634445.jpg" />

    </LinearLayout>


